<resources>
    <string name="app_name">Quiz app</string>
    <string name="question1">... do you go to the gym?</string>
    <string name="next">next</string>
    <string name="quiz_app">Quiz app</string>
    <string name="quiz_categories">Categories</string>
    <string name="english">English</string>
    <string name="geography">Geography</string>
    <string name="physics">Physics</string>
    <string name="computer">Computer</string>
    <string name="english_quiz">English Quiz</string>
    <string name="question">Question</string>
    <string name="_1">1</string>
    <string name="next2">Next</string>
    <string name="stop">Quit Quiz</string>
    <string name="my">my</string>
    <string name="_10">/10</string>
    <string name="congratulations">Congratulations!</string>
    <string name="gap1">congratulations on completing the quiz,</string>
    <string name="gap2">the number of quiz is over</string>
    <string name="score">Your score</string>
    <string name="FirstIntroText">Qulay foydalanish</string>
    <string name="FirstIntroDesc">Bilimingizni qulay tarzda tekshiring</string>
    <string name="SecondIntroText">Fanlar majmuasidan testlar</string>
    <string name="SecondIntroDesc">Fanlardan bilimingizni tekshirib ko\'ring</string>
    <string name="ThirdIntroText">Natijani tekshirish</string>
    <string name="ThirdIntroDesc">O\'z bilimingizni raqamlarda tekshiring</string>
    <string name="Math">O\'z bilimingizni raqamlarda tekshiring</string>
    <string name="Exit">Exit</string>
    <string name="Home">Home</string>
</resources>