<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A33"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/science_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/next_font"
        android:paddingBottom="8dp"
        android:text="@string/english_quiz"
        android:textColor="#31364E"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/question"
        android:textColor="#CACBCE"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/science_quiz" />

    <TextView
        android:id="@+id/question_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/_1"
        android:textColor="#E5E6E7"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/question"
        app:layout_constraintLeft_toRightOf="@id/question"
        app:layout_constraintTop_toTopOf="@id/question"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/all_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="#535974"
        android:textSize="31sp"
        app:layout_constraintBottom_toBottomOf="@id/question_num"
        app:layout_constraintLeft_toRightOf="@id/question_num"
        app:layout_constraintTop_toTopOf="@id/question_num" />

    <View
        android:id="@+id/divider_id"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_num" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:text="@string/question1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_id" />


    <LinearLayout
        android:id="@+id/item1"
        style="@style/question_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_text"
       >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:paddingTop="12dp"
            android:id="@+id/variant_round_btn"
            android:src="@drawable/empty_check"
            />

        <TextView
            android:id="@+id/variant1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:text="@string/my"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item2"
        style="@style/question_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:paddingTop="12dp"
            android:src="@drawable/empty_check" />

        <TextView
            android:id="@+id/variant2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:text="you"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item3"
        style="@style/question_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item2">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:paddingTop="12dp"
            android:src="@drawable/empty_check" />

        <TextView
            android:id="@+id/variant3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:text="they"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item4"
        style="@style/question_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item3">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:paddingTop="12dp"
            android:src="@drawable/empty_check" />

        <TextView
            android:id="@+id/variant4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="7dp"
            android:text="he"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/next_id">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/power_off"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:paddingBottom="4dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/next_id"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:background="@drawable/question_next"
        android:gravity="center"
        android:onClick="next1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/quit_id"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next2"
            android:textColor="@color/white"
            android:paddingBottom="4dp"
            android:textSize="23sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
