<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF4F6"
    android:orientation="vertical"
    >

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="300dp"
        android:id="@+id/back1"
        android:background="@drawable/top_bg"
        android:gravity="center"
        android:orientation="vertical"/>

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="150dp"
        android:id="@+id/quiz_pic"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/quiz"
        android:layout_marginStart="15dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/quiz_pic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:layout_marginTop="10dp"
        android:text="@string/quiz_app"
        android:textColor="#FFFF00"
        android:textSize="53sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:id="@+id/category_text"
        app:layout_constraintTop_toBottomOf="@id/back1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/quiz_categories"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/category_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/chapter1"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:background="@drawable/categ1"
        android:layout_marginStart="50dp">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/english"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="@font/font_text"
            android:text="@string/english"
            />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/category_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/chapter1"
        app:layout_constraintBottom_toBottomOf="@id/chapter1"
        android:layout_marginRight="50dp"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:id="@+id/chapter2"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/categ1"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="40dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/mountain"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geography"
            android:paddingTop="10dp"
            android:textSize="22sp"
            android:fontFamily="@font/font_text"
            android:textColor="@color/black"

            />


    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/chapter1"
        app:layout_constraintLeft_toLeftOf="@id/chapter1"
        app:layout_constraintRight_toRightOf="@id/chapter1"
        android:layout_marginTop="30dp"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:id="@+id/chapter3"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/categ1"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/atom_1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/physics"
            android:paddingTop="5dp"
            android:fontFamily="@font/font_text"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/chapter3"
        app:layout_constraintBottom_toBottomOf="@id/chapter3"
        app:layout_constraintRight_toRightOf="@id/chapter2"
        app:layout_constraintLeft_toLeftOf="@id/chapter2"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/categ1"
        >

        <ImageView
            android:paddingTop="9dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/computer"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:text="@string/computer"
            android:paddingTop="10dp"
            android:fontFamily="@font/font_text"
            android:textColor="@color/black"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

